more analysis plots added
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9885 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -70,7 +70,8 @@ results in a peak at $t_{\rm m} \approx -0.310\un{GeV^2}$, with amplitude $A \ap
 %
 \begin{figure*}
 \begin{center}
-\includegraphics[width=\textwidth]{phase_illustration.pdf}
+% TODO: file not in the repository
+%\includegraphics[width=\textwidth]{phase_illustration.pdf}
 \vskip-3mm
 \caption{}
 \label{fig:phase_illustration}
@@ -194,6 +195,7 @@ We observe in the data a non-constant-exponential \& oscillating behaviour.
 The hadronic slope by itself, the interference by itself, or a combination of both, must be
 responsible for this effect.
 
+\iffalse
 {\bf 1. Fit with KL or SWY interference, constant/central phase, constant B slope}
 
 Figures \ref{fig:90,SWY,con,1} and \ref{fig:90,KL,con,1}: statistical+systematic –based fitting exclude with high significance that the data can be
@@ -281,6 +283,7 @@ Show/compare chi2, significance, C.L., ...
 \label{fig:90,KL,per,3}
 \end{center}
 \end{figure*}
+\fi
 
 Figures \ref{fig:90,KL,per,2} and \ref{fig:90,KL,per,3}:
 statistical only and statistical+systematic fitting for slope with 2 and 3 parameters,
