--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -84,7 +84,7 @@ been tagged, respectively.
 \includegraphics{fig/overview.pdf}
 \vskip-3mm
 \caption{%
-Beam conditions as a function of time from the beginning of the first data-taking day. The T2 rate is roughly proportional to luminosity, while the RP rate is sensitive to luminosity plus beam-halo. The vertical dashed lines delimit periods of uninterrupted data taking.
+Beam conditions as a function of time from the beginning of the first data-taking day. The T2 rate (blue) is roughly proportional to luminosity, while the RP rate (red) is sensitive to luminosity plus beam-halo. The yellow bands represent periods of uninterrupted data taking.
 }
 \label{fig:overview}
 \end{center}
