--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -20,7 +20,8 @@ A proton with such scattering angles, emerging in IP vertex at $x^*$, $y^*$ with
 		y &= L_y\, \theta_y^* + v_y\, y^* + D_y\, \xi\ ,
 	\end{aligned}
 \end{equation}
-given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions, the dispersion terms are irrelevant for this process.
+given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions 
+(i.e. $\xi = 0$), the dispersion terms are irrelevant for this process.
 
 For the reported measurement, a special $\beta^* = 90\un{m}$ optics was used, with essentially the same characteristics as at $\sqrt s = 7\un{TeV}$ \cite{epl96}, see Table~\ref{tab:optics} for details. In the vertical plane, it features parallel-to-point focussing ($v_y \approx 0$) and large effective length $L_y$. In the horizontal plane, the almost vanishing effective length $L_x$ simplifies the separation of elastic and diffractive events: any sizeable horizontal displacement must be due to a momentum loss $\xi$.
 
