--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{mathptmx}
+\usepackage{url}
 
 %------------------------------------------------------------------------------
 
@@ -135,6 +136,8 @@ NKTH-OTKA grant 74458 (Hungary).
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
 	arXiv:1406.0546, accepted by New Journal of Physics.
+
+\bibitem{op-elog} CERN BE-OP eLogbook: \url{https://www.cern.ch/ab-dep-op-elogbook/elogbook/secure/eLogbook.php?shiftId=1045825}
 
 \bibitem{compete} 
 	\Name{J.R.~Cudell~\etal{} (COMPETE Collaboration)}
