--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -17,23 +17,23 @@ Differential cross-section using ``optimised'' binning, as given in Table~\ref{t
 
 The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and Figure \ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential. This plot immediately suggests a non-exponentiality of the data -- pure exponentials would look as (almost) linear functions in this reference frame.
 
-To study the detailed behaviour of the differential cross-section, a series of fits has been made using parametrisation:
+To study the detailed behaviour of the differential cross-section, a series of fits has been made using the parametrisation:
 \begin{equation}
 \label{eq:fit param}
 {\d\sigma\over\d t}(t) = \left. \d\sigma\over\d t\right|_{0} \ \exp\left( \sum\limits_{i = 1}^{N_{b}} b_i\, t^i \right) \ ,
 \end{equation}
-which includes both pure exponential ($N_b = 1$) and its straight-forward extensions ($N_b = 2, 3, \ldots$).
+which includes the pure exponential ($N_b = 1$) and its straight-forward extensions ($N_b = 2, 3$).
 
 The fits have been performed by the standard least-squares method, in particular minimising:
 \begin{equation}
 \label{eq:chi sq}
 \chi^2 = \Delta^\T \mat V^{-1} \Delta\ ,\quad \Delta = (\hbox{data} - \hbox{fit})\ ,\quad \mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
 \end{equation}
-where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table ~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty from Table ~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm stat}$ (see Eq.~(\ref{eq:covar mat})).
+where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty from Table~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm stat}$ (see Eq.~(\ref{eq:covar mat})).
 
-The quality of fits is judged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Then, p-value stands for probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Eventually, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
+The quality of fits is judged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Secondly, the p-value stands for the probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Eventually, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
 
-Figure~\ref{fig:data rel ob} shows several fits of the differential cross-section with the parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent, $N_b$. The corresponding fit quality is given in Table~\ref{tab:fits ob}, clearly indicating that the purely-exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance.
+Figure~\ref{fig:data rel ob} shows several fits of the differential cross-section with the parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent, $N_b$. The corresponding fit quality is given in Table~\ref{tab:fits ob}, clearly indicating that the purely exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance.
 %
 The other two fits ($N_b = 2, 3$) are of reasonable quality and can, therefore, be used for a total cross-section estimation with the optical theorem in the form
 \begin{equation}
@@ -90,7 +90,7 @@ Differential cross-section using the ``optimised'' binning and plotted as relati
 %--------------------------------------------------
 % results from per-mille binning
 
-The incompatibility between a pure-exponential behaviour and the data with the ``per-mille'' binning can be shown equally well. However, since the number of points is drastically increased, the straight-forward $\chi^2$ test does not have sufficient sensitivity, and a different test is used. Assuming that the data can be described by a pure exponential, the fit parameters should have compatible values for fits over different ranges. Figure~\ref{fig:data rel cpb0.001} shows a fit (minimisation of $\chi^2$ from Eq.~(\ref{eq:chi sq})) with parametrisation
+The incompatibility between a pure-exponential behaviour and the data with the ``per-mille'' binning can be shown equally well. However, since the number of points is drastically increased, the straight-forward $\chi^2$ test does not have sufficient sensitivity, and a different test is used. Assuming that the data can be described by a pure exponential, the fit parameters should have compatible values for fits over different ranges. Figure~\ref{fig:data rel cpb0.001} shows a fit (minimisation of $\chi^2$ from Eq.~(\ref{eq:chi sq})) with the parametrisation
 \begin{equation}
 \label{eq:split fit param}
 {\d\sigma\over\d t}(t) =
@@ -108,7 +108,7 @@ a_1 - a_2\\
 b_1 - b_2\\
 \end{pmatrix}\ ,
 \end{equation}
-where $\mat V_p$ is the uncertainty matrix for the difference vector $\Delta_p$. It yields $\chi_p^2 = 65.4$ which with $2$ degrees of freedom corresponds to a p-value of $6.2\cdot10^{-15}$ and a significance of $7.8\un{\sigma}$. This, in turn, rules out the hypothesis of a purely exponential behaviour of the data.
+where $\mat V_p$ is the covariance matrix for the difference vector $\Delta_p$. It yields $\chi_p^2 = 65.4$ which with $2$ degrees of freedom corresponds to a p-value of $6.2\cdot10^{-15}$ and a significance of $7.8\un{\sigma}$. This, in turn, rules out the hypothesis of a purely exponential behaviour of the data.
 
 
 \iffalse
